--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,4 +1,26 @@
-<footer>
+
+
+     <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="contact-heading">Let's Get In Touch!</h2>
+                    <p class="footer-text">Ready to start your next project with me? That's great! Give me a call or send me an email and I will get back to you as soon as possible!</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <p>+1(647)-544-4382</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <p><a href="mailto:mithun-nath@outlook.com">mithun-nath@outlook.com</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!--
+    <footer>
         <div class="container">
             <div class="row">
               <p class="footer-text text-center">
@@ -7,3 +29,6 @@
             </div>
         </div>
     </footer>
+
+
+-->
